# qbuf

./: .clang-format  .gitignore  AGENTS.md  BUG_REPRODUCTION_SUMMARY.md  CMakeLists.txt  GCC_BUG_REPRODUCIBLE.cpp  GCC_OPTIMIZATION_BUG_REPORT.md  INVESTIGATION_SUMMARY.md  LICENSE  README.md  channels.scm  dev-vm.scm  dev-vm.todo.md  manifest.scm
.github/: copilot-instructions.md
.github/workflows/: build.yml
.todo/: benchmark-csv-output.md  mmap-queue.md  std-array-bulk-ops.md
cpp/: .gitignore  AGENTS.md  CMakeLists.txt  README.md  TODO.md  guix.scm  test_debug.cpp  test_debug_fifo.cpp  test_exact_sequence.cpp  test_minimal.cpp  test_sequence.cpp  test_verbose.cpp
cpp/include/qbuf/: spsc.hpp  spsc_queue.hpp
cpp/include/ringbuf/: spsc_queue.hpp
cpp/qbuf/: AGENTS.md  CMakeLists.txt  TODO.md  guix.scm  manifest.scm
cpp/qbuf/include/qbuf/: spsc.hpp
cpp/qbuf/src/: benchmark.cpp
cpp/qbuf/tests/: affirm.hpp  test_main.cpp  test_spsc.cpp  test_spsc.hpp
cpp/src/: benchmark.cpp
cpp/tests/: test_main.cpp  test_spsc.cpp
docs/: dev-vm.md
include/qbuf/: mmap_spsc.hpp  mutex_queue.hpp  spsc.hpp
scripts/: dev-vm-create.sh  dev-vm-destroy.sh  dev-vm-ssh.sh  reformat-code.sh
src/: benchmark.cpp
tests/: assert.hpp  test_main.cpp  test_mmap_spsc.cpp  test_mmap_spsc.hpp  test_mutex_queue.cpp  test_mutex_queue.hpp  test_spsc.cpp  test_spsc.hpp
